# d365stuff-chat

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agent.py  app.py  chainlit.md  main.py  promp.py  pyproject.toml
posts/: best-stuff.md  call-center-payments-part-2-credit-cards.md  call-x-web-service-with-browser-snippet.md  copy-write-d365-document-management-handling-file-to-wherever-via-logic-apps.md  create-call-center-payment-cash.md  customdataentityopeninexcel.md  d365-address-books.md  d365-custom-web-service-with-pagination.md  d365-enum-values-sql.md  dmf-jumpref.md  dmfdatapopulation-download-recurring-files.md  dmfutil-dmfdownloaddatapackage.md  does-not-implement-the-delegate-convertpurchtablef.md  drop-table-d365-x-sp_removetable.md  dynamicscon-march-2021-companion-logic-apps-d365.md  entity-cannot-be-deleted-while-dependent-entities-for-a-processing-group-exist-delete-dependent-entities-for-a-processing-group-and-try-again.md  formjsonserializer.md  get-and-post-stuff-via-logic-apps.md  import-export-migrate-receipt-formats.md  introtodomrules.md  json-odata.md  ledgerdimensionfacade.md  mailbox-does-not-exist.md  one.md  order-lines-cannot-be-deleted-while-dependent-stores.md  overridegiftcardbalance.md  reading-parsing-text-files-from-document-handling.md  retailattributehelper.md  reverse-record-set-lookup-attribute-match.md  run-multiple-instances-of-teams.md  send-noninteractive-e-mail-x-d365.md  systemdatetime.md  the-sales-order-cannot-be-deleted-because-related-.md  trace-batch-jobs-and-more-via-cmd-logman.md  x-in-clause.md  (+3 more)
(+4 files in other folders)
