[project]
name = "d365stuff"
version = "0.1.0"
description = "A tool to chat D365 blog posts"

dependencies = [
    "requests",
    "beautifulsoup4",
    "html2text",
    "markitdown",
    "lets-talk",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
lets-talk = { git = "https://github.com/mafzaal/lets-talk.git", rev = "main" }
